jipsy-tests/src/test/resources/valid/SimpleTestClass.java
import java.util.RandomAccess;

import org.kordamp.jipsy.ServiceProviderFor;

@ServiceProviderFor(RandomAccess.class)
public class SimpleTestClass implements RandomAccess {
	
}
